--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -27,5 +27,14 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:applicationContext.xml</param-value>
 	</context-param>
+	
+	<filter>
+        <filter-name>cors</filter-name>
+        <filter-class>com.neo.filter.CORSFilter</filter-class> <!-- your package name and filter class -->
+    </filter>
+    <filter-mapping>
+        <filter-name>cors</filter-name>
+        <url-pattern>/api/*</url-pattern>
+    </filter-mapping> 
 
 </web-app>
