--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -29,11 +29,11 @@
 	</context-param>
 	
 	<filter>
-        <filter-name>cors</filter-name>
+        <filter-name>cores</filter-name>
         <filter-class>com.neo.filter.CORSFilter</filter-class> <!-- your package name and filter class -->
     </filter>
     <filter-mapping>
-        <filter-name>cors</filter-name>
+        <filter-name>cores</filter-name>
         <url-pattern>/api/*</url-pattern>
     </filter-mapping> 
 
